# solochain-extrinsics

./: .gitignore  Cargo.toml  README.md
src/: build_extrinsic_dilithium.rs  ec_dilithium_extrinsic.rs  ec_signer.rs  generate_dilithium_keypair.rs
