[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.42.1"
subxt-signer = "0.42.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

jsonrpsee = { version = "0.22", features = ["http-client"] }
serde_json = "1.0"

pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sp-keyring = "24.0.0"
sp-core = "21.0.0"
sp-runtime = "24.0.0"
scale-info = { version = "2.10", features = ["derive"] }
parity-scale-codec = { version = "3.7.5", features = ["derive"] }

[[bin]]
name = "ec_signer"
path = "src/ec_signer.rs"

[[bin]]
name = "build_extrinsic_dilithium"
path = "src/build_extrinsic_dilithium.rs"

[[bin]]
name = "ec_dilithium_extrinsic"
path = "src/ec_dilithium_extrinsic.rs"


[[bin]]
name = "generate_dilithium_keypair"
path = "src/generate_dilithium_keypair.rs"